@@ -49,8 +49,8 @@ Additions:
    > Soul Shackles: Tome
    > Wyvern's Fury: Weapon, Tome
    > Ice II: Tome
- - 122 new items:
-  ~ 17 recovery/buff items:
+ - 123 new items:
+  ~ 19 recovery/buff items:
    > Yellow Salve
    > Blueberry Sizzle
    > Offense Combination
@@ -66,6 +66,7 @@ Additions:
    > Stimulant
    > Thick-Skinned Herb
    > Vicious Herb
+   > Earl's Takeout
    > Medicated Eyedrops
    > Fire Resistance Potion
   ~ 12 foodstuffs:
